# storeSimul

./: .dockerignore  .gitignore  BRANCH.md  Dockerfile.unified  Dockerfle  README.md  docker-compose.unified.yml  docker-compose.yml  fly.toml  nginx.conf  package.json  setup-db.sh  supervisord.conf
containers/: README.md
containers/base/: Dockerfile
containers/base-doas/: Dockerfile
containers/base-elixir/: Dockerfile
containers/base-haskell/: Dockerfile
containers/base-jre/: Dockerfile
containers/base-python/: Dockerfile
containers/image1/: Dockerfile
containers/image2/: Dockerfile
containers/image3/: Dockerfile
customers/: .dockerignore  Dockerfile  README.md  pyproject.toml  server.py
customers/customers/: main.py  models.py  sq
dashboard/: build.ts  package.json
dashboard-api/: main.py
dashboard/src/: App.tsx  index.css  index.html
dashboard/src/components/: CodeBlock.tsx  NewCustomers.tsx  OrdersChart.tsx  OrdersLineChart.tsx  ProductDepartmentPieChart.tsx  ProductSupplyResilienceChart.tsx  RecentOrders.tsx  SupplierProductProportionChart.tsx  TopCustomersChart.tsx  TopProducts.tsx  charts.js  charts.tsx
database/: Dockerfile  README.md
database/postgres-init/: 01_init_tables.sql  02_init_proceedures.sql
database/procedures/: employee_audit.sql  welcome_gift.sql
orders/: Dockerfile  README.md  mix.exs
orders/config/: config.exs
orders/lib/orders/: newOrder.ex  schemas.ex
products/: Dockerfile  README.md  build.sbt
products/src/main/resources/: logback.xml
products/src/main/scala/: app.scala  db.scala  model.scala
suppliers/: Dockerfile  suppliers.cabal
suppliers/app/: Main.hs
