[tool.poetry]
name = "customers"
version = "0.1.0"
description = ""
authors = ["Hugo Ludemann <hugo.ludemann@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
loguru = "^0.7.3"
faker = "^33.3.0"
numpy = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
