cabal-version:      2.4
name:               suppliers
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Hugo Ludemann
maintainer:         hugo.ludemann@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable suppliers
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.0,
        fakedata ^>=1.0.3,
        text ^>=2.0.2,
        bytestring ^>=0.11.5.2,
        postgresql-simple ^>=0.7.0.0,
        statistics ^>=0.16.2.1,
        mwc-random ^>=0.15.0.2,
        random ^>=1.2.1.3,
        fast-logger

    hs-source-dirs:   app
    default-language: Haskell2010
